[gd_scene load_steps=6 format=3 uid="uid://cbdoreun580vo"]

[ext_resource type="Script" path="res://towers/mi.gd" id="1_0m70y"]
[ext_resource type="Texture2D" uid="uid://ds1pt6ch85hwi" path="res://sprites/MI_L1_base.png" id="1_xgklm"]
[ext_resource type="Texture2D" uid="uid://bf2k4mw6xhghd" path="res://sprites/MI_bullet1.png" id="2_hrl77"]
[ext_resource type="Texture2D" uid="uid://qcmg7x8bqaru" path="res://sprites/MI_L1.png" id="3_afycg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ydnnl"]
radius = 11.0454

[node name="MI" type="Area2D"]
scale = Vector2(0.9, 0.9)
script = ExtResource("1_0m70y")

[node name="missile" type="Node2D" parent="."]
visible = false

[node name="missile1" type="Sprite2D" parent="missile"]
position = Vector2(-22.05, -42)
scale = Vector2(0.245, 0.245)
texture = ExtResource("2_hrl77")

[node name="missile3" type="Sprite2D" parent="missile"]
position = Vector2(22.05, -42)
scale = Vector2(0.245, 0.245)
texture = ExtResource("2_hrl77")

[node name="missile2" type="Sprite2D" parent="missile"]
position = Vector2(0, -42)
scale = Vector2(0.245, 0.245)
texture = ExtResource("2_hrl77")

[node name="level1" type="Node2D" parent="."]

[node name="base" type="Sprite2D" parent="level1"]
scale = Vector2(0.35, 0.35)
texture = ExtResource("1_xgklm")

[node name="barrel" type="Sprite2D" parent="level1"]
scale = Vector2(0.35, 0.35)
texture = ExtResource("3_afycg")

[node name="Timer" type="Timer" parent="."]

[node name="Timer1" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ydnnl")
